--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                                         <a class="page-scroll active" href="#home">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#about">About</a>
+                                        <a class="page-scroll" href="#about">About Us</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#services">Services</a>
+                                        <a class="page-scroll" href="#foods">Our Foods</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#portfolio">Gallery</a>
@@ -210,14 +210,13 @@
     
     <!--====== FEATURES PART START ======-->
 
-    <section id="services" class="features_area pt-120">
+    <section id="foods" class="features_area pt-120">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section_title text-center pb-25">
-                        <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Our Services</h4>
-                        <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s">Lorem ipsum dolor sit
-                            amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt labor dolore.</p>
+                        <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Our Foods</h4>
+                        <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s">Here are some of our best foods!</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -225,49 +224,121 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.2s">
-                        <i class="lni lni-briefcase"></i>
-                        <h4 class="features_title">Digital Business</h4>
-                        <p>Lorem ipsum dolor sit amet, sadipscing elitr, sed diam nonumy eirmod tempor invidunt labor dolore magna .</p>
+                        <img src="assets/images/foods/Spaghetti-Squash-with-Chard-9.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">SPAGHETTI SQUASH WITH CHARD, WALNUTS AND CHÈVRE</h4>
+                        <p>A simple dish for Roasted Spaghetti Squash with Chard, Toasted Walnuts and Chèvre.  A healthy low-carb meal perfect for serving with your favorite protein.</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.3s">
-                        <i class="lni lni-clipboard"></i>
-                        <h4 class="features_title">Startup Business</h4>
-                        <p>Lorem ipsum dolor sit amet, sadipscing elitr, sed diam nonumy eirmod tempor invidunt labor dolore magna .</p>
+                        <img src="assets/images/foods/Califlower-Pasta-100-2.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">ROASTED CAULIFLOWER PASTA WITH TOASTED WALNUTS, PARSLEY, GARLIC & LEMON ZEST</h4>
+                        <p>Roasted Cauliflower Pasta with Toasted Walnuts, Parsley, Garlic and Lemon Zest- a healthy vegetarian meal.</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.4s">
-                        <i class="lni lni-target-revenue"></i>
-                        <h4 class="features_title">Business Investment</h4>
-                        <p>Lorem ipsum dolor sit amet, sadipscing elitr, sed diam nonumy eirmod tempor invidunt labor dolore magna .</p>
+                        <img src="assets/images/foods/Butternut-Lasagna-with-Mushrooms-and-Sage-114.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">BUTTERNUT LASAGNA WITH MUSHROOMS AND SAGE</h4>
+                        <p>Butternut Lasagna with Wild Mushrooms and Sage- a cozy vegetarian meal (or vegan) perfect for special gatherings on the holiday table.</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.2s">
-                        <i class="lni lni-invention"></i>
-                        <h4 class="features_title">Business Solutions</h4>
-                        <p>Lorem ipsum dolor sit amet, sadipscing elitr, sed diam nonumy eirmod tempor invidunt labor dolore magna .</p>
+                        <img src="assets/images/foods/Cacio-de-pepe-15.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">CACIO E PEPE</h4>
+                        <p>A simple, delicious vegetarian dish, Cacio e Pepe.</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.3s">
-                        <i class="lni lni-bar-chart"></i>
-                        <h4 class="features_title">Business Analysis</h4>
-                        <p>Lorem ipsum dolor sit amet, sadipscing elitr, sed diam nonumy eirmod tempor invidunt labor dolore magna .</p>
+                        <img src="assets/images/foods/broccoli-manicotti-32.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">BROCCOLI MANICOTTI WITH BURRATA</h4>
+                        <p>Delicious Broccoli-Stuffed Manicotti with Buratta Cheese.</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.4s">
-                        <i class="lni lni-calendar"></i>
-                        <h4 class="features_title">Consulting Business</h4>
-                        <p>Lorem ipsum dolor sit amet, sadipscing elitr, sed diam nonumy eirmod tempor invidunt labor dolore magna .</p>
+                        <img src="assets/images/foods/Italian-Baked-Beans-26.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">ITALIAN BAKED BEANS AND GREENS</h4>
+                        <p>A simple dish, Italian Baked Beans, with kale, cannellini beans, and Marinara sauce,  baked in the oven until golden and bubbling. A delicious vegetarian main!</p>
+                    </div> <!-- single features -->
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
+                        data-wow-delay="0.2s">
+                        <img src="assets/images/foods/vegetable-fried-rice_.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">FARMERS MARKET FRIED RICE</h4>
+                        <p>Farmers Market Fried Rice uses all the beautiful veggies you may have in your fridge, CSA box or at your local farmer's market or local Asian Market.</p>
+                    </div> <!-- single features -->
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
+                        data-wow-delay="0.3s">
+                        <img src="assets/images/foods/broccolini-stir-fry-100-2.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">TOFU STIR-FRY WITH BROCCOLINI AND MUSHROOMS</h4>
+                        <p>Delicious Tofu Stir-Fry with Broccolini and Mushrooms is a quick, easy weeknight dinner loaded with healthy vegetables! Vegan and GF adaptable!</p>
+                    </div> <!-- single features -->
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
+                        data-wow-delay="0.4s">
+                        <img src="assets/images/foods/Instant-Pot-Butternut-Risotto_-15.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">BUTTERNUT RISOTTO WITH LEEKS</h4>
+                        <p>A quick and easy weeknight dish, Butternut Risotto with Leeks and Spinach made with very little fuss. Vegan-adaptable and Gluten-free.</p>
+                    </div> <!-- single features -->
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
+                        data-wow-delay="0.2s">
+                        <img src="assets/images/foods/vegetable-fried-rice_.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">INSTANT POT PINTO BEAN STEW</h4>
+                        <p>A simple delicious dish, Pinto Bean Stew made in an Instant pot using dry pinto beans, yams, corn, and poblanos. A hearty, flavorful and vegan-adaptable weeknight dinner.</p>
+                    </div> <!-- single features -->
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
+                        data-wow-delay="0.3s">
+                        <img src="assets/images/foods/Vegetarian-Enchiladas_-12.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">FARMER'S MARKET VEGGIE QUESADILLAS</h4>
+                        <p>Vegetarian Quesadillas filled with farmer's market veggies like bell peppers, zucchini, sweet potato, greens, black beans and melty cheese (optional) seasoned with savory Mexican spices.</p>
+                    </div> <!-- single features -->
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
+                        data-wow-delay="0.4s">
+                        <img src="assets/images/foods/Instant-Pot-Butternut-Risotto_-15.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">MEXICAN RICE WITH SHEET-PAN VEGGIES</h4>
+                        <p>Healthy & Flavorful Mexican Rice made with brown rice, topped with sheet-pan roasted yams, red onions, and shishito peppers.  Serve with pickled jalapeños and pumpkin seeds for a comforting, delicious vegan meal.</p>
+                    </div> <!-- single features -->
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
+                        data-wow-delay="0.2s">
+                        <img src="assets/images/foods/French-Onion-Soup-19.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">FRENCH ONION SOUP</h4>
+                        <p>A cozy, comforting, classic dish, French Onion Soup with caramelized onions in rich deep broth topped with toasty croutons and melted gruyere.  Vegan, Vegetarian Adaptable!</p>
+                    </div> <!-- single features -->
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
+                        data-wow-delay="0.3s">
+                        <img src="assets/images/foods/Mushroom-soup_-11.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">CREAMY MUSHROOM SOUP</h4>
+                        <p>Creamy Mushroom Soup with Garlic Chips and Rosemary  – a delicious dish that perfect for special gatherings or simple enough for weeknight dinners!</p>
+                    </div> <!-- single features -->
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
+                        data-wow-delay="0.4s">
+                        <img src="assets/images/foods/Harira-Soup-Recipe-17.jpg" alt="portfolio" style="width: 50%; height: 50%;">
+                        <h4 class="features_title">MOROCCAN LENTIL AND CHICKPEA SOUP (HARIRA)</h4>
+                        <p>oroccan Lentil and Chickpea Soup (aka Harira) is hearty, full of protein and loaded with nutrients.  Warming fragrant spices make this healthy one-pot meal deeply flavorful!</p>
                     </div> <!-- single features -->
                 </div>
             </div> <!-- row -->
