--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     
     <!--====== Title ======-->
-    <title>Simple - Bootstrap 5 Website Template</title>
+    <title>Green Cateromg</title>
     
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -108,13 +108,14 @@
         </div> <!-- header navbar -->
 
         <div class="header_hero">
-            <div class="single_hero bg_cover d-flex align-items-center" style="background-image: url(assets/images/hero.jpg)">
+            <div class="single_hero bg_cover d-flex align-items-center" style="background-image: url(assets/images/homepage.jpg)">
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-8 col-md-10">
                             <div class="hero_content text-center">
-                                <h2 class="hero_title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Simple Bootstrap 5</br> Website Template</h2>
-                                <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">A super simple website template based on Bootstrap 5 and HTML5, comes with all essential <br class="d-none d-xl-block"> elements & features to get started and ready to use for almost any type of business websites.</p>
+                                <h2 class="hero_title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Green Catering</h2>
+                                <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">
+                                    Layanan catering sehat dengan ketentuan diet vegetarian</p>
                                 <a href="#features" class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Explore</a>
                             </div> <!-- hero content -->
                         </div>
@@ -180,15 +181,15 @@
                         <div class="about_content pt-120 pb-130">
                             <div class="section_title pb">
                                 <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">About Our
-                                    Creative Proccess</h4>
-                                <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s">Lorem ipsum dolor
-                                    sit amet, consetetur sadipscing elitr, sed dianonumy eirmod tempor invidunt ut
-                                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                                    dolores et erebum</p>
-                                <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.6s">Lorem ipsum dolor
-                                    sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                                    ut labore etdolore maali quyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                                    dolores</p>
+                                    Services</h4>
+                                <p class="wow fadeInUp about_content_text"data-wow-duration="1.3s" data-wow-delay="0.4s">
+                                    Green Catering adalah layanan jasa catering dengan menu sehat sesuai dengan ketentuan diet vegetarian. 
+                                    Sesuai namanya, Green Catering menyediakan berbagai variasi masakan dengan bahan dasar sayur dan buah-buahan serta 
+                                    turunan produk hewani yang hewani yang diperbolehkan dalam diet vegetarian seperti susu dan telur.
+                                    </p>
+                                <p class="wow fadeInUp about_content_text" data-wow-duration="1.3s" data-wow-delay="0.6s">
+                                    Saat ini, Green Catering hanya beroperasi di Kota Surabaya serta menyediakan catering per jenis makanan, per hari, 
+                                    serta per minggu sesuai dengan keinginan Anda.</p>
                             </div> <!-- section title -->
                             <a href="#0" class="main-btn wow fadeInUp" data-wow-duration="1.3s"
                                 data-wow-delay="0.7s">Learn More</a>
