--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     
     <!--====== Title ======-->
-    <title>Green Cateromg</title>
+    <title>Green Catering</title>
     
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -79,13 +79,13 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ms-auto">
                                     <li class="nav-item">
-                                        <a class="page-scroll active" href="#home">Home</a>
+                                        <a class="page-scroll active" href="#home">Beranda</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#about">About Us</a>
+                                        <a class="page-scroll" href="#about">Tentang Kami</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#foods">Our Foods</a>
+                                        <a class="page-scroll" href="#foods">Galeri Makanan</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#portfolio">Gallery</a>
@@ -180,8 +180,7 @@
                     <div class="col-lg-6">
                         <div class="about_content pt-120 pb-130">
                             <div class="section_title pb">
-                                <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">About Our
-                                    Services</h4>
+                                <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Tentang Kami</h4>
                                 <p class="wow fadeInUp about_content_text"data-wow-duration="1.3s" data-wow-delay="0.4s">
                                     Green Catering adalah layanan jasa catering dengan menu sehat sesuai dengan ketentuan diet vegetarian. 
                                     Sesuai namanya, Green Catering menyediakan berbagai variasi masakan dengan bahan dasar sayur dan buah-buahan serta 
@@ -192,7 +191,7 @@
                                     serta per minggu sesuai dengan keinginan Anda.</p>
                             </div> <!-- section title -->
                             <a href="#0" class="main-btn wow fadeInUp" data-wow-duration="1.3s"
-                                data-wow-delay="0.7s">Learn More</a>
+                                data-wow-delay="0.7s">Pelajari Lebih Lanjut</a>
                         </div> <!-- about content -->
                     </div>
                 </div> <!-- row -->
@@ -216,8 +215,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section_title text-center pb-25">
-                        <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Our Foods</h4>
-                        <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s">Here are some of our best foods!</p>
+                        <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Makanan Kami</h4>
+                        <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s">Ini dia makanan-makanan terbaik kami!</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
