--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
             </div> <!-- container -->
             
             <div class="about_image bg_cover wow fadeInLeft" data-wow-duration="1.3s" data-wow-delay="0.2s"
-                style="background-image: url(assets/images/about.jpg)">
+                style="background-image: url(assets/images/tentangkami.jpg)">
                 <div class="image_content">
-                    <h4 class="experience"><span>5</span> Years of Experience</h4>
+                    <h4 class="experience"><span>Green</span>Catering</h4>
                 </div>
             </div> <!-- about image -->
         </div>
