--- a/index.html
+++ b/index.html
@@ -226,24 +226,24 @@
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.2s">
                         <img src="assets/images/foods/Spaghetti-Squash-with-Chard-9.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">SPAGHETTI SQUASH WITH CHARD, WALNUTS AND CHÈVRE</h4>
-                        <p>A simple dish for Roasted Spaghetti Squash with Chard, Toasted Walnuts and Chèvre.  A healthy low-carb meal perfect for serving with your favorite protein.</p>
+                        <h4 class="features_title">SPAGHETTI SQUASH DENGAN CHARD, WALNUTS AND CHÈVRE</h4>
+                        <p>Hidangan sehat rendah kalori yang cocok disajikan dengan protein favorit Anda.</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.3s">
                         <img src="assets/images/foods/Califlower-Pasta-100-2.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">ROASTED CAULIFLOWER PASTA WITH TOASTED WALNUTS, PARSLEY, GARLIC & LEMON ZEST</h4>
-                        <p>Roasted Cauliflower Pasta with Toasted Walnuts, Parsley, Garlic and Lemon Zest- a healthy vegetarian meal.</p>
+                        <h4 class="features_title">PASTA KOL DENGAN TOASTED WALNUTS, PARSLEY, BAWANG & KULIT LEMON</h4>
+                        <p>Pasta Kol Panggang yang cocok untuk diet sehat vegetarian</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.4s">
                         <img src="assets/images/foods/Butternut-Lasagna-with-Mushrooms-and-Sage-114.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">BUTTERNUT LASAGNA WITH MUSHROOMS AND SAGE</h4>
-                        <p>Butternut Lasagna with Wild Mushrooms and Sage- a cozy vegetarian meal (or vegan) perfect for special gatherings on the holiday table.</p>
+                        <h4 class="features_title">KACANG MENTEGA LASSAGNA DENGAN JAMUR DAN SAGE</h4>
+                        <p>Hidangan vegetarian (atau vegan) yang cocok untuk dinikmati bersama keluarga besar atau orang terdekat </p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -251,23 +251,24 @@
                         data-wow-delay="0.2s">
                         <img src="assets/images/foods/Cacio-de-pepe-15.jpg" alt="portfolio" style="width: 50%; height: 50%;">
                         <h4 class="features_title">CACIO E PEPE</h4>
-                        <p>A simple, delicious vegetarian dish, Cacio e Pepe.</p>
+                        <p>Sebuah hidangan vegetarian sederhana yang lezat dan sehat</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.3s">
                         <img src="assets/images/foods/broccoli-manicotti-32.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">BROCCOLI MANICOTTI WITH BURRATA</h4>
-                        <p>Delicious Broccoli-Stuffed Manicotti with Buratta Cheese.</p>
+                        <h4 class="features_title">BROKOLI MANICOTTI DENGAN BURRATA</h4>
+                        <p>Pasta Manicotti yang diisi dengan Brokoli dengan topping Keju Burrata</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.4s">
                         <img src="assets/images/foods/Italian-Baked-Beans-26.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">ITALIAN BAKED BEANS AND GREENS</h4>
-                        <p>A simple dish, Italian Baked Beans, with kale, cannellini beans, and Marinara sauce,  baked in the oven until golden and bubbling. A delicious vegetarian main!</p>
+                        <h4 class="features_title">KACANG DAN SAYURAN PANGGANG KHAS ITALIA</h4>
+                        <p>Hidangan Kacang Panggang sederhana dengan Sayur Kale, Kacang Cannellini, dan Saus Marinara yang dipanggang 
+                            di oven sampai berwarna golden brown</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
