--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.3s">
                         <img src="assets/images/foods/Califlower-Pasta-100-2.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">PASTA KOL DENGAN TOASTED WALNUTS, PARSLEY, BAWANG & KULIT LEMON</h4>
+                        <h4 class="features_title">KOL PASTA DENGAN WALNUT, PARSLEY, BAWANG & KULIT LEMON</h4>
                         <p>Pasta Kol Panggang yang cocok untuk diet sehat vegetarian</p>
                     </div> <!-- single features -->
                 </div>
@@ -241,7 +241,7 @@
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.4s">
                         <img src="assets/images/foods/Butternut-Lasagna-with-Mushrooms-and-Sage-114.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">KACANG MENTEGA LASSAGNA DENGAN JAMUR DAN SAGE</h4>
+                        <h4 class="features_title">BUTTERNUT LASSAGNA</h4>
                         <p>Hidangan vegetarian (atau vegan) yang cocok untuk dinikmati bersama keluarga besar atau orang terdekat </p>
                     </div> <!-- single features -->
                 </div>
@@ -257,8 +257,8 @@
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.3s">
                         <img src="assets/images/foods/broccoli-manicotti-32.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">BROKOLI MANICOTTI DENGAN BURRATA</h4>
-                        <p>Pasta Manicotti yang diisi dengan Brokoli dengan topping Keju Burrata</p>
+                        <h4 class="features_title">BROKOLI MANICOTTI</h4>
+                        <p>Pasta manicotti yang diisi dengan brokoli dan ditambah topping keju burrata yang lezat</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -266,7 +266,7 @@
                         data-wow-delay="0.4s">
                         <img src="assets/images/foods/Italian-Baked-Beans-26.jpg" alt="portfolio" style="width: 50%; height: 50%;">
                         <h4 class="features_title">KACANG DAN SAYURAN PANGGANG KHAS ITALIA</h4>
-                        <p>Hidangan Kacang Panggang sederhana dengan Sayur Kale, Kacang Cannellini, dan Saus Marinara yang dipanggang 
+                        <p>Hidangan kacang panggang sederhana dengan sayur kale, kacang cannellini, dan saus marinara yang dipanggang 
                             di oven sampai berwarna golden brown</p>
                     </div> <!-- single features -->
                 </div>
@@ -274,72 +274,74 @@
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.2s">
                         <img src="assets/images/foods/vegetable-fried-rice_.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">FARMERS MARKET FRIED RICE</h4>
-                        <p>Farmers Market Fried Rice uses all the beautiful veggies you may have in your fridge, CSA box or at your local farmer's market or local Asian Market.</p>
+                        <h4 class="features_title">NASI GORENG SAYUR</h4>
+                        <p>Nasi goreng dengan tambahan sayur mayur segar yang mudah ditemukan di pasar atau swalayan terdekat</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.3s">
                         <img src="assets/images/foods/broccolini-stir-fry-100-2.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">TOFU STIR-FRY WITH BROCCOLINI AND MUSHROOMS</h4>
-                        <p>Delicious Tofu Stir-Fry with Broccolini and Mushrooms is a quick, easy weeknight dinner loaded with healthy vegetables! Vegan and GF adaptable!</p>
+                        <h4 class="features_title">TUMIS TAHU DENGAN BROKOLI DAN JAMUR</h4>
+                        <p>Hidangan tahu lezat dan sehat yang cocok untuk menemani malam harimu</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.4s">
                         <img src="assets/images/foods/Instant-Pot-Butternut-Risotto_-15.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">BUTTERNUT RISOTTO WITH LEEKS</h4>
-                        <p>A quick and easy weeknight dish, Butternut Risotto with Leeks and Spinach made with very little fuss. Vegan-adaptable and Gluten-free.</p>
+                        <h4 class="features_title">BUTTERNUT RISOTTO</h4>
+                        <p>Risotto yang dimasak dengan labu butternut dan dihidangkan bersama dengan daun bawang dan sayur bayam</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.2s">
                         <img src="assets/images/foods/vegetable-fried-rice_.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">INSTANT POT PINTO BEAN STEW</h4>
-                        <p>A simple delicious dish, Pinto Bean Stew made in an Instant pot using dry pinto beans, yams, corn, and poblanos. A hearty, flavorful and vegan-adaptable weeknight dinner.</p>
+                        <h4 class="features_title">REBUSAN KACANG PINTO</h4>
+                        <p>Rebusan kacang pinto, ubi, jagung, dan paprika yang di masak dalam pot instant</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.3s">
                         <img src="assets/images/foods/Vegetarian-Enchiladas_-12.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">FARMER'S MARKET VEGGIE QUESADILLAS</h4>
-                        <p>Vegetarian Quesadillas filled with farmer's market veggies like bell peppers, zucchini, sweet potato, greens, black beans and melty cheese (optional) seasoned with savory Mexican spices.</p>
+                        <h4 class="features_title">QUESADILLAS SAYUR</h4>
+                        <p>Quesadillas vegetarian dengan isi paprika, zucchini, ubi, kacang hitam, keju leleh, dan sayuran lainnya dengan bumbu Meksiko</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.4s">
                         <img src="assets/images/foods/Instant-Pot-Butternut-Risotto_-15.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">MEXICAN RICE WITH SHEET-PAN VEGGIES</h4>
-                        <p>Healthy & Flavorful Mexican Rice made with brown rice, topped with sheet-pan roasted yams, red onions, and shishito peppers.  Serve with pickled jalapeños and pumpkin seeds for a comforting, delicious vegan meal.</p>
+                        <h4 class="features_title">NASI DENGAN SAYUR KHAS MEKSIKO</h4>
+                        <p>Hidangan nasi khas Meksiko yang terbuat dari beras coklat dengan topping ubi panggang, bawang merah, dan lada shishito dan
+                            dan disajikan cabai jalapeños dan biji labu</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.2s">
                         <img src="assets/images/foods/French-Onion-Soup-19.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">FRENCH ONION SOUP</h4>
-                        <p>A cozy, comforting, classic dish, French Onion Soup with caramelized onions in rich deep broth topped with toasty croutons and melted gruyere.  Vegan, Vegetarian Adaptable!</p>
+                        <h4 class="features_title">SUP BAWANG KHAS PRANCIS</h4>
+                        <p>Sup Bawang dengan bawang yang ditumis coklat dengan kuah kaldu yang kuat serta dengan tambahan topping roti panggang
+                            dan lelehan keju gruyere</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.3s">
                         <img src="assets/images/foods/Mushroom-soup_-11.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">CREAMY MUSHROOM SOUP</h4>
-                        <p>Creamy Mushroom Soup with Garlic Chips and Rosemary  – a delicious dish that perfect for special gatherings or simple enough for weeknight dinners!</p>
+                        <h4 class="features_title">SUP JAMUR</h4>
+                        <p>Sup jamur yang creamy dengan bawang putih yang digoreng kering dan rosemary</p>
                     </div> <!-- single features -->
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_features text-center mt-60 wow fadeInUp" data-wow-duration="1.3s"
                         data-wow-delay="0.4s">
                         <img src="assets/images/foods/Harira-Soup-Recipe-17.jpg" alt="portfolio" style="width: 50%; height: 50%;">
-                        <h4 class="features_title">MOROCCAN LENTIL AND CHICKPEA SOUP (HARIRA)</h4>
-                        <p>oroccan Lentil and Chickpea Soup (aka Harira) is hearty, full of protein and loaded with nutrients.  Warming fragrant spices make this healthy one-pot meal deeply flavorful!</p>
+                        <h4 class="features_title">KACANG LENTIL MARROKO DAN SUP KACANG ARAB (HARIRA)</h4>
+                        <p>Hidangan hangat yang kaya akan protein dan nutrisi</p>
                     </div> <!-- single features -->
                 </div>
             </div> <!-- row -->
