done menu harian

--- a/index.html
+++ b/index.html
@@ -574,38 +574,58 @@
     
     <!--====== TESTIMONIAL PART START ======-->
 
-    <section id="testimonial" class="testimonial_area pt-130 pb-130 bg_cover" style="background-image: url(assets/images/testimonial.jpg)">
+    <section id="menuhari" class="menuhari_area pt-130 pb-130 bg_cover" style="background-image: url(assets/images/makanharian.jpg)">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <div class="testimonial_active_wrapper">
+                    <div class="menuhari_active_wrapper">
                         <div class="testimonial_active">
-                            <div class="single_testimonial text-center">
-                                <img src="assets/images/author-1.jpg" alt="author">
-                                <h5 class="author_name">Isabela Moreira</h5>
-                                <span>UX Specialist, Yoast</span>
-                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-                                    vero eos accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.
-                                </p>
+                            <div class="single_hari text-center">
+                                <h5 class="nama_hari">Menu Senin</h5>
+                                <img src="assets/images/foods/Spaghetti-Squash-with-Chard-9.jpg" alt="makanan">
+                                <img src="assets/images/foods/Califlower-Pasta-100-2.jpg" alt="makanan">
+                                <p>SPAGHETTI SQUASH WITH CHARD, WALNUTS AND CHÈVRE dan ROASTED CAULIFLOWER PASTA WITH TOASTED WALNUTS, PARSLEY, GARLIC & LEMON ZEST</p>
                             </div>
-                            <div class="single_testimonial text-center">
-                                <img src="assets/images/author-2.jpg" alt="author">
-                                <h5 class="author_name">Fiona Smith</h5>
-                                <span>Sr. Software Engineer</span>
-                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-                                    vero eos accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.
-                                </p>
+                            <div class="single_hari text-center">
+                                <h5 class="nama_hari">Menu Selasa</h5>
+                                <img src="assets/images/foods/Butternut-Lasagna-with-Mushrooms-and-Sage-114.jpg" alt="makanan">
+                                <img src="assets/images/foods/Cacio-de-pepe-15.jpg" alt="makanan">
+                                <p>BUTTERNUT LASAGNA WITH MUSHROOMS AND SAGE dan CACIO E PEPE</p>
                             </div>
-                            <div class="single_testimonial text-center">
-                                <img src="assets/images/author-3.jpg" alt="author">
-                                <h5 class="author_name">Elon Musk</h5>
-                                <span>Creaitve Businessman</span>
-                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-                                    vero eos accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.
-                                </p>
+                            <div class="single_hari text-center">
+                                <h5 class="nama_hari">Menu Rabu</h5>
+                                <img src="assets/images/foods/broccoli-manicotti-32.jpg" alt="makanan">
+                                <img src="assets/images/foods/Italian-Baked-Beans-26.jpg" alt="makanan">
+                                <p>BROCCOLI MANICOTTI WITH BURRATA dan ITALIAN BAKED BEANS AND GREENS</p>
+                            </div>
+                            <div class="single_hari text-center">
+                                <h5 class="nama_hari">Menu Kamis</h5>
+                                <img src="assets/images/foods/Mushroom-soup_-11.jpg" alt="makanan">
+                                <img src="assets/images/foods/broccolini-stir-fry-100-2.jpg" alt="makanan">
+                                <p>CREAMY MUSHROOM SOUP dan TOFU STIR-FRY WITH BROCCOLINI AND MUSHROOMS</p>
+                            </div>
+                            <div class="single_hari text-center">
+                                <h5 class="nama_hari">Menu Jumat</h5>
+                                <img src="assets/images/foods/Instant-Pot-Butternut-Risotto_-15.jpg" alt="makanan">
+                                <img src="assets/images/foods/Pinto-bean-soup-2.jpg" alt="makanan">
+                                <p>BUTTERNUT RISOTTO WITH LEEKS dan INSTANT POT PINTO BEAN STEW</p>
+                            </div>
+                            <div class="single_hari text-center">
+                                <h5 class="nama_hari">Menu Sabtu</h5>
+                                <img src="assets/images/foods/Mexican-Rice-Bowls-11.jpg" alt="makanan">
+                                <img src="assets/images/foods/veggie-quesadilla-61.jpg" alt="makanan">
+                                <p>FARMER'S MARKET VEGGIE QUESADILLAS dan MEXICAN RICE WITH SHEET-PAN VEGGIES</p>
+                            </div>
+                            <div class="single_hari text-center">
+                                <h5 class="nama_hari">Menu Minggu</h5>
+                                <img src="assets/images/foods/French-Onion-Soup-19.jpg" alt="makanan">
+                                <img src="assets/images/foods/Harira-Soup-Recipe-17.jpg" alt="makanan">
+                                <p>FRENCH ONION SOUP dan MOROCCAN LENTIL AND CHICKPEA SOUP (HARIRA)</p>
+                            </div>
+                            <div class="single_hari text-center">
+                                <h5 class="nama_hari">Menu Setiap Hari</h5>
+                                <img src="assets/images/foods/vegetable-fried-rice_.jpg" alt="makanan">
+                                <p>FARMERS MARKET FRIED RICE</p>
                             </div>
                         </div>
                     </div>
