--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                         <a class="page-scroll" href="#foods">Galeri Makanan</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#portfolio">Gallery</a>
+                                        <a class="page-scroll" href="#menuhari">Menu Harian</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#team">Team</a>
