--- a/index.html
+++ b/index.html
@@ -583,6 +583,10 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="menuhari_active_wrapper">
+                        <div class="section_title text-center pb-25">
+                            <h4 class="title wow fadeInUp" style="color: #fff;" data-wow-duration="1.3s" data-wow-delay="0.2s">Paket Harian</h4>
+                            <p class="wow fadeInUp" style="color:#dedad1" data-wow-duration="1.3s" data-wow-delay="0.4s">Paket harian dari kami</p>
+                        </div> <!-- section title -->
                         <div class="testimonial_active">
                             <div class="single_hari text-center">
                                 <h5 class="nama_hari">Menu Senin</h5>
