added paket A bulanan

--- a/index.html
+++ b/index.html
@@ -362,15 +362,19 @@
                 <div class="col-lg-6">
                     <div class="section_title text-center pb-60">
                         <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Paket Makanan</h4>
-                        <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s">Lorem ipsum dolor sit
-                            amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt labor dolore.</p>
+                        <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s">Paket-paket makanan yang siap menemani keseharian Anda.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
         </div> <!-- container -->
         <div class="portfolio_wrapper d-flex flex-wrap">
-            <div class="single_portfolio wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">
-                <img src="assets/images/portfolio-1.jpg" alt="portfolio">
+            <div class="single_portfolio wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s" >
+                <!-- <img src="assets/images/portfolio-1.jpg" alt="portfolio", height = "800px"> -->
+                <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s"><center>Paket A<br><br></center></h4>
+                <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s"><center>Rp. 500.000<br><br></center></h4>
+                <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s"><center>Senin : Spaghetti Squash dengan Walnuts and CHÈVRE, Nasi Goreng Sayur, Brokoli Manicotti<br><br>Selasa : Kol Pasta dengan walnut, parsley & bawang, Sup Bawang Khas Prancis, Sup Jamur<br><br>Rabu : Kacang dan Sayuran Panggang Khas Italia, Quesadillas Sayur, Butternut Risotto<br><br>Kamis : Tumis Tahu dengan Brokoli dan Jamur, Rebusan Kacang Pinto, Cacio E Pepe<br><br>Jumat : Nasi dengan Sayur Khas Meksiko, Butternut Lassagna, Nasi Goreng Sayur<br><br></center></p>
+                <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s"><center><br><br></center></p>
+                
                 <div class="portfolio_content">
                     <ul class="meta">
                         <li><a href="#0"><i class="lni lni-link"></i></a></li>
@@ -397,12 +401,17 @@
                 </div> <!-- Single portfolio -->
             </div> <!-- portfolio wrapper -->
             <div class="single_portfolio wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">
-                <img src="assets/images/portfolio-4.jpg" alt="portfolio">
+                <!-- <img src="assets/images/portfolio-4.jpg" alt="portfolio"> -->
+                <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s"><center>Paket Bulanan<br><br></center></h4>
+                <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s"><center>Rp. 1.900.000<br><br></center></h4>
+                <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s"><center>Senin : Spaghetti Squash dengan Walnuts and CHÈVRE, Nasi Goreng Sayur, Brokoli Manicotti<br><br>Selasa : Kol Pasta dengan walnut, parsley & bawang, Sup Bawang Khas Prancis, Sup Jamur<br><br>Rabu : Kacang dan Sayuran Panggang Khas Italia, Quesadillas Sayur, Butternut Risotto<br><br>Kamis : Tumis Tahu dengan Brokoli dan Jamur, Rebusan Kacang Pinto, Cacio E Pepe<br><br>Jumat : Nasi dengan Sayur Khas Meksiko, Butternut Lassagna, Nasi Goreng Sayur<br><br></center></p>
+                <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s"><center><br><br></center></p>
+                
                 <div class="portfolio_content">
                     <ul class="meta">
                         <li><a href="#0"><i class="lni lni-link"></i></a></li>
                     </ul>
-                    <h5 class="portfolio_title">UI/UX Projects</h5>
+                    <h5 class="portfolio_title">Pesan</h5>
                 </div> <!-- Single portfolio -->
             </div> <!-- portfolio wrapper -->
             <div class="single_portfolio wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">
