--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 </div> <!-- Single portfolio -->
             </div> <!-- portfolio wrapper -->
             <div class="single_portfolio wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.3s">
-                <img src="assets/images/portfolio-2.jpg" alt="portfolio">
+                <!-- <img src="assets/images/portfolio-2.jpg" alt="portfolio"> -->
                 <div class="portfolio_content">
                     <ul class="meta">
                         <li><a href="#0"><i class="lni lni-link"></i></a></li>
@@ -403,8 +403,8 @@
             <div class="single_portfolio wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">
                 <!-- <img src="assets/images/portfolio-4.jpg" alt="portfolio"> -->
                 <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s"><center>Paket Bulanan<br><br></center></h4>
-                <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s"><center>Rp. 1.900.000<br><br></center></h4>
-                <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s"><center>Senin : Spaghetti Squash dengan Walnuts and CHÈVRE, Nasi Goreng Sayur, Brokoli Manicotti<br><br>Selasa : Kol Pasta dengan walnut, parsley & bawang, Sup Bawang Khas Prancis, Sup Jamur<br><br>Rabu : Kacang dan Sayuran Panggang Khas Italia, Quesadillas Sayur, Butternut Risotto<br><br>Kamis : Tumis Tahu dengan Brokoli dan Jamur, Rebusan Kacang Pinto, Cacio E Pepe<br><br>Jumat : Nasi dengan Sayur Khas Meksiko, Butternut Lassagna, Nasi Goreng Sayur<br><br></center></p>
+                <h4 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s"><center>Diskon 10%<br><br></center></h4>
+                <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s"><center>4 Paket A, B, C, atau Campuran dan akan mendapatkan diskon 10% dari total harga</center></p>
                 <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.4s"><center><br><br></center></p>
                 
                 <div class="portfolio_content">
